# Creating-2D-laser-slam-from-scratch

./: LICENSE  README.md  install_dependence.sh
TrirdParty/ceres-solver/: build-ceres.sh
lesson1/: CMakeLists.txt  package.xml
lesson1/launch/: demo.launch  feature.rviz  feature_detection.launch
lesson1/src/: feature_detection.cc  laser_scan_node.cc
lesson2/: CMakeLists.txt  package.xml
lesson2/include/lesson2/: scan_match_icp.h  scan_to_pointclod2_converter.h
lesson2/launch/: scan2pointcloud.rviz  scan_match_icp.launch  scan_match_icp.rviz  scan_to_pointcloud2_converter.launch
lesson2/src/: scan_match_icp.cc  scan_to_pointclod2_converter.cc
lesson3/: CMakeLists.txt  package.xml
lesson3/config/: plicp_odometry.rviz  plicp_odometry.yaml
lesson3/include/lesson3/: plicp_odometry.h  scan_match_plicp.h
lesson3/launch/: plicp_odometry.launch  scan_match_plicp.launch
lesson3/src/: plicp_odometry.cc  scan_match_plicp.cc
lesson4/: CMakeLists.txt  package.xml
lesson4/config/: gmapping.rviz  hector_slam.rviz  occupancy_grid.rviz
lesson4/include/lesson4/gmapping/: gmapping.h
lesson4/include/lesson4/gmapping/grid/: array2d.h  gridlinetraversal.h  harray2d.h  map.h
lesson4/include/lesson4/gmapping/utils/: point.h
lesson4/include/lesson4/hector_mapping/: hector_mapping.h  hector_slam.h
lesson4/include/lesson4/hector_mapping/map/: GridMap.h  GridMapBase.h  GridMapCacheArray.h  GridMapLogOdds.h  MapDimensionProperties.h  OccGridMapBase.h  OccGridMapUtil.h  OccGridMapUtilConfig.h
lesson4/include/lesson4/hector_mapping/matcher/: ScanMatcher.h
lesson4/include/lesson4/hector_mapping/scan/: DataPointContainer.h
lesson4/include/lesson4/hector_mapping/slam_main/: HectorSlamProcessor.h  MapProcContainer.h  MapRepMultiMap.h  MapRepresentationInterface.h
lesson4/include/lesson4/hector_mapping/util/: HectorMapMutex.h  PoseInfoContainer.h
lesson4/launch/: hector_slam.launch  make_gmapping_map.launch  make_hector_map.launch  make_occupancy_grid_map.launch
lesson4/src/gmapping/: gmapping.cc
lesson4/src/hector/: hector_mapping_main.cc
lesson4/src/hector_mapping/: hector_mapping.cc  hector_slam.cc  s
lesson4/src/occupancy_grid/: occupancy_grid.cc
lesson5/: CMakeLists.txt  package.xml
lesson5/config/: lidar_undistortion.rviz  lidar_undistortion.yaml
lesson5/include/lesson5/: lidar_undistortion.h
lesson5/launch/: lidar_undistortion.launch
lesson5/src/: fout.cc  lidar_undistortion.cc
lesson6/: CMakeLists.txt  package.xml
lesson6/config/: karto_slam.rviz  karto_slam_outdoor.rviz  mapper_params.yaml  mapper_params_better.yaml  mapper_params_outdoor.yaml  mapper_params_outdoor_ceres.yaml
lesson6/include/lesson6/: karto_slam.h
lesson6/include/lesson6/ceres_solver/: angle_local_parameterization.h  ceres_solver.h  normalize_angle.h  pose_graph_2d_error_term.h
lesson6/include/lesson6/g2o_solver/: g2o_solver.h
lesson6/include/lesson6/gtsam_solver/: gtsam_solver.h
lesson6/include/lesson6/spa_solver/: spa_solver.h
lesson6/launch/: karto_slam.launch  karto_slam_outdoor.launch  karto_slam_outdoor_ceres.launch
lesson6/lib/open_karto/: CMakeLists.txt  README.md  package.xml
lesson6/lib/open_karto/include/open_karto/: Karto.h  Mapper.h
lesson6/lib/open_karto/src/: Karto.cpp  Mapper.cpp
lesson6/lib/sparse_bundle_adjustment/: CHANGELOG.rst  CMakeLists.txt  README.txt  package.xml
lesson6/lib/sparse_bundle_adjustment/include/sparse_bundle_adjustment/: csparse.h  node.h  proj.h  read_spa.h  sba.h  sba_file_io.h  sba_setup.h  spa2d.h  visualization.h
lesson6/lib/sparse_bundle_adjustment/include/sparse_bundle_adjustment/bpcg/: bpcg.h
lesson6/lib/sparse_bundle_adjustment/src/: cholmod_timing.cpp  csparse.cpp  node.cpp  proj.cpp  sba.cpp  sba_file_io.cpp  spa.cpp  spa2d.cpp  visualization.cpp
lesson6/lib/sparse_bundle_adjustment/src/nodes/: sba_node.cpp
lesson6/src/: ceres_solver.cc  karto_slam.cc  spa_solver.cc  spa_solver.cpp
lesson6/src/ceres_solver/: ceres_solver.cc
lesson6/src/g2o_solver/: g2o_solver.cc
lesson6/src/gtsam_solver/: gtsam_solver.cc
